fixed alignment issue in LI when displaying dogs, changed from justify-end to justify-center

--- a/css/styles.css
+++ b/css/styles.css
@@ -225,3 +225,7 @@ button,
     transform: rotate(360deg);
   }
 }
+
+.flex {
+  display: flex;
+}
